--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				$fruit.ajout = function () {
 
 					// ADD A NEW ELEMENT.
-					$fruit.list.push({ nom: $fruit.nom, prix: $fruit.prix });
+					$fruit.liste.push({ nom: $fruit.nom, prix: $fruit.prix });
 
 					// CLEAR THE FIELDS.
 					$fruit.nom = '';
